--- a/TravelEagle/package.json
+++ b/TravelEagle/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
     "@gorhom/bottom-sheet": "^5",
+    "@marceloterreiro/flash-calendar": "^1.6.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
